fix: arrow overlapping with extra time label

--- a/meteor/client/styles/rundownView.scss
+++ b/meteor/client/styles/rundownView.scss
@@ -1681,6 +1681,7 @@ body.no-overflow {
 
 							&.label-overflow-time {
 								font-weight: 300;
+								padding-right: 10px;
 							}
 
 							> .segment-timeline__piece__label {
